--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -5,4 +5,4 @@ filePath=src/test/resources/ExcelTestData/TestData.xlsx
 username=Automation_enthus
 password=Numpy@ninja2025
 baseUrl=https://dsportalapp.herokuapp.com
-practice_questions_excelPath=src/test/resources/testdata/DsAlgo_PracticeuestionCode.xlsx
+#practice_questions_excelPath=src/test/resources/testdata/DsAlgo_PracticeuestionCode.xlsx
