--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -1,8 +1,3 @@
-url=https://dsportalapp.herokuapp.com/home
+url=https://dsportalapp.herokuapp.com
 browser=chrome
-#browser=firefox
 filePath=src/test/resources/ExcelTestData/TestData.xlsx
-username=Automation_enthus
-password=Numpy@ninja2025
-baseUrl=https://dsportalapp.herokuapp.com
-#practice_questions_excelPath=src/test/resources/testdata/DsAlgo_PracticeuestionCode.xlsx
